--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -5,13 +5,13 @@
     </div>
     <ul class="align-center">
       <li>We would love to hear from you!</li>
-      <li>Mailing Address:</li>
+      <li><strong>Mailing Address:</strong></li>
       <li>242 West Main Street</li>
       <li>Suite 219</li>
       <li>Hendersonville, TN 37075</li>
-      <li>Email: <a href="mailto:dispatch@tnnettech.com">dispatch@tnnettech.com</a></li>
-      <li>Phone: <a href="tel:1-615-264-8656">615-264-8656</a></li>
-      <li>Fax: 888-507-5696</li>
+      <li><strong>Email</strong>: <a href="mailto:dispatch@tnnettech.com">dispatch@tnnettech.com</a></li>
+      <li><strong>Phone</strong>: <a href="tel:1-615-264-8656">615-264-8656</a></li>
+      <li><strong>Fax</strong>: 888-507-5696</li>
     </ul>
   </div>
 </div>
