--- a/app/styles/companies.scss
+++ b/app/styles/companies.scss
@@ -1,7 +1,7 @@
 .company {
 
   &__header {
-    font-family: $t-raj;
+    font-family: $t-roboto;
     text-align: center;
     background: rgba($c-grey, 0.2);
     border-radius: 0.5rem;
