--- a/app/styles/navbar.scss
+++ b/app/styles/navbar.scss
@@ -6,7 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-family: $t-raj;
+    font-family: $t-roboto;
     max-width: 65rem;
     margin: 0 auto;
   }
