--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -6,7 +6,16 @@
       The following is an abbreviated list of where we have
       provided support in our most commonly served industries
       in the past.</p>
-    <div class="title">
+
+      <div class="grid">
+        <div class="grid__item one-half-width">
+          <div class="title">
+            <h1 class="title-text">Retail</h1>
+          </div>
+        </div>
+      </div>
+
+    {{!-- <div class="title">
       <h1 class="title-text">Retail</h1>
     </div>
     <div class="grid">
@@ -65,6 +74,6 @@
           </div>
         </div>
       {{/each}}
-    </div>
+    </div> --}}
   </div>
 </div>
