Client logos replaced with text cards

--- a/app/styles/clients.scss
+++ b/app/styles/clients.scss
@@ -1,37 +1,48 @@
+.client-card {
+  padding: 1rem;
+  border: $s-border;
+  border-radius: 0.5rem;
+  height: 16rem;
+}
+
+
 .one-half-width {
   width: calc(100% / 2 - 2rem);
-  margin: 1rem;
 }
-
-.one-third-width {
-  width: calc(100% / 3 - 2rem);
-  text-align: center;
-  margin: 1rem;
-}
-
-.one-quarter-width {
-  width: calc(100% / 4 - 2rem);
-  margin: 1rem;
-}
-
-.logo  {
-
-  &-width {
-    width: calc(100% / 5 - 2rem);
-    margin: 1rem;
-  }
-}
-
-@media (min-width: 320px) and (max-width: 500px) {
-  .logo-width {
-    width: calc(100% / 2 - 2rem);
-  }
+//
+// .one-third-width {
+//   width: calc(100% / 3 - 2rem);
+//   text-align: center;
+//   margin: 1rem;
+// }
+//
+// .one-quarter-width {
+//   width: calc(100% / 4 - 2rem);
+//   margin: 1rem;
+// }
+//
+// .logo  {
+//
+//   &-width {
+//     width: calc(100% / 5 - 2rem);
+//     margin: 1rem;
+//   }
+// }
+//
+@media (min-width: 320px) and (max-width: 802px) {
+  // .logo-width {
+  //   width: calc(100% / 2 - 2rem);
+  // }
 
   .one-half-width {
     width: 100%;
   }
 
-  .one-quarter-width {
-    width: calc(100% / 2 - 2rem);
+  .client-card {
+    height: auto;
   }
+
+  // .one-quarter-width {
+  //   width: calc(100% / 2 - 2rem);
+  // }
 }
