--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -9,8 +9,72 @@
 
       <div class="grid">
         <div class="grid__item one-half-width">
-          <div class="title">
-            <h1 class="title-text">Retail</h1>
+          <div class="client-card">
+            <div class="title">
+              <h1 class="title-text">Retail</h1>
+            </div>
+            <ul>
+              <li>• Abercrombie & Fitch</li>
+              <li>• American Eagle Outfitters</li>
+              <li>• Bebe</li>
+              <li>• Build-A-Bear</li>
+              <li>• CVS</li>
+              <li>• Dick's Sporting Goods</li>
+              <li>• Dollar General</li>
+              <li>• Hollister</li>
+              <li>• Old Navy</li>
+              <li>• Walgreens</li>
+            </ul>
+          </div>
+        </div>
+        <div class="grid__item one-half-width">
+          <div class="client-card">
+            <div class="title">
+              <h1 class="title-text">Financial</h1>
+            </div>
+            <ul>
+              <li>• Bank of America</li>
+              <li>• JPMorgan Chase & Co.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="grid__item one-half-width">
+          <div class="client-card">
+            <div class="title">
+              <h1 class="title-text">Hospitality</h1>
+            </div>
+            <ul>
+              <li>• Avis Rent a Car</li>
+              <li>• Budget Inn</li>
+              <li>• Holiday Inn</li>
+              <li>• Red Roof Inn</li>
+              <li>• The Hertz Corporation</li>
+            </ul>
+          </div>
+        </div>
+        <div class="grid__item one-half-width">
+          <div class="client-card">
+            <div class="title">
+              <h1 class="title-text">Food Services</h1>
+            </div>
+            <ul>
+              <li>• Arby's</li>
+              <li>• Burger King</li>
+              <li>• McDonald's</li>
+              <li>• Olive Garden</li>
+            </ul>
+          </div>
+        </div>
+        <div class="grid__item one-half-width">
+          <div class="client-card">
+            <div class="title">
+              <h1 class="title-text">Health Care</h1>
+            </div>
+            <ul>
+              <li>• Hospitals</li>
+              <li>• Dialysis Centers</li>
+              <li>• Long-term Care Facilities</li>
+            </ul>
           </div>
         </div>
       </div>
