Restyle services pages

--- a/app/styles/clients.scss
+++ b/app/styles/clients.scss
@@ -1,10 +1,12 @@
-.client-card {
+.card {
   padding: 1rem;
   border: $s-border;
   border-radius: 0.5rem;
-  height: 16rem;
 }
 
+.client-box {
+  height: 16rem;
+}
 
 .one-half-width {
   width: calc(100% / 2 - 2rem);
