--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -1,6 +1,8 @@
 <div class="section">
   <div class="container">
-    <h1 class="title-text">Our Clients</h1>
+    <div class="title">
+      <h1 class="title-text">Our Clients</h1>
+    </div>
     <p class="body-text">Tennessee Network Technologies is experienced in a
       vast array of services across all industries.
       The following is an abbreviated list of where we have
@@ -9,7 +11,7 @@
 
       <div class="grid">
         <div class="grid__item one-half-width">
-          <div class="client-card">
+          <div class="card">
             <div class="title">
               <h1 class="title-text">Retail</h1>
             </div>
@@ -28,7 +30,7 @@
           </div>
         </div>
         <div class="grid__item one-half-width">
-          <div class="client-card">
+          <div class="card">
             <div class="title">
               <h1 class="title-text">Financial</h1>
             </div>
@@ -39,7 +41,7 @@
           </div>
         </div>
         <div class="grid__item one-half-width">
-          <div class="client-card">
+          <div class="card">
             <div class="title">
               <h1 class="title-text">Hospitality</h1>
             </div>
@@ -53,7 +55,7 @@
           </div>
         </div>
         <div class="grid__item one-half-width">
-          <div class="client-card">
+          <div class="card">
             <div class="title">
               <h1 class="title-text">Food Services</h1>
             </div>
@@ -66,7 +68,7 @@
           </div>
         </div>
         <div class="grid__item one-half-width">
-          <div class="client-card">
+          <div class="card">
             <div class="title">
               <h1 class="title-text">Health Care</h1>
             </div>
