--- a/app/styles/services.scss
+++ b/app/styles/services.scss
@@ -1,17 +1,20 @@
-.card {
-  padding: 1rem;
-}
-
 .no-margin {
   margin: 0;
 }
 
+.flex {
+  display: flex;
+}
+
 .info {
-  width: 65%;
+  width: calc(60% - 2rem);
+  padding: 1rem;
 }
 
 .image {
-  width: 35%;
+  width: calc(40% - 2rem);
+  height: 100%;
+  padding: 1rem;
 }
 
 @media (min-width: 320px) and (max-width: 700px) {
