Media queries for all pages

--- a/app/templates/companies.hbs
+++ b/app/templates/companies.hbs
@@ -3,23 +3,29 @@
     <div class="title">
       <h1 class="title-text">Affiliated Companies</h1>
     </div>
-    <div class="company">
-      <div class="company__header">
-        <h1 class="company__header_text">Black Dog Surplus</h1>
-      </div>
-      <a class="align-center" href="http://blackdogsurplus.net">
-        <img class="company__image" src="/img/black-dog-logo.png" alt="">
-      </a>
-      <div class="company__info">
-        <p>Black Dog Surplus provides customized freeze dried Rations and Meals Ready to Eat
-          for emergency personnel, civilian emergency agencies and military usage.
-          Black Dog Surplus Rations are developed with their Clients to meet specific user needs,
-          including dietary or religious requirements — and is not limited to nut/seafood allergy,
-          gluten or dairy intolerance, Sikh, Halal or Kosher. Black Dog Surplus works to meet
-          and exceed existing Client ration standards, including overall nutrition, caloric density,
-          variety, taste, packaging, and value. Black Dog Surplus is able to deploy food, water,
-          fire, shelter, first aid and hygiene for up to 25,000 people in a disaster situation
-          anywhere in the continental United States in less than 24 hours.</p>
+    <div class="grid">
+      <div class="grid__item">
+        <div class="card flex">
+          <div class="image">
+              <img src="/img/black-dog-logo.png" alt="" class="">
+          </div>
+          <div class="info">
+              <div class="title">
+                <hi class="title-text">Black Dog Surplus</hi>
+              </div>
+              <p>
+                Black Dog Surplus provides customized freeze dried Rations and Meals Ready to Eat
+                for emergency personnel, civilian emergency agencies and military usage.
+                Black Dog Surplus Rations are developed with their Clients to meet specific user needs,
+                including dietary or religious requirements — and is not limited to nut/seafood allergy,
+                gluten or dairy intolerance, Sikh, Halal or Kosher. Black Dog Surplus works to meet
+                and exceed existing Client ration standards, including overall nutrition, caloric density,
+                variety, taste, packaging, and value. Black Dog Surplus is able to deploy food, water,
+                fire, shelter, first aid and hygiene for up to 25,000 people in a disaster situation
+                anywhere in the continental United States in less than 24 hours.
+              </p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
