--- a/app/templates/services.hbs
+++ b/app/templates/services.hbs
@@ -17,19 +17,19 @@
         <div class="grid__item">
           <div class="card flex">
             <div class="image">
-                <img src="/img/web-based.jpg" alt="" class="">
+                <img src="/img/web-based.jpg" alt="" class="img">
             </div>
             <div class="info">
-                <div class="title">
-                  <hi class="title-text">Web-based Services</hi>
-                </div>
-                <p>
-                  Web-Based Services are at the core of what Tennessee Network Technologies provides.
-                  At the center of this is a combination of Customer Service and real time reporting.
-                  Our Report Management Program consist of a PR (Project Representative) assigned to
-                  your project, and a web based Client/Tech program for instant status and deliverables.
-                  This allows us to focus on properly managing each project, ensuring satisfaction each time.
-                </p>
+              <div class="title">
+                <hi class="title-text">Web-based Services</hi>
+              </div>
+              <p>
+                Web-Based Services are at the core of what Tennessee Network Technologies provides.
+                At the center of this is a combination of Customer Service and real time reporting.
+                Our Report Management Program consist of a PR (Project Representative) assigned to
+                your project, and a web based Client/Tech program for instant status and deliverables.
+                This allows us to focus on properly managing each project, ensuring satisfaction each time.
+              </p>
             </div>
           </div>
         </div>
@@ -59,7 +59,7 @@
           </div>
 
           <div class="image">
-              <img src="/img/on-site.png" alt="" class="">
+              <img src="/img/on-site.png" alt="" class="img">
           </div>
         </div>
       </div>
