--- a/app/styles/services.scss
+++ b/app/styles/services.scss
@@ -2,10 +2,6 @@
   margin: 0;
 }
 
-.flex {
-  display: flex;
-}
-
 .info {
   width: calc(60% - 2rem);
   padding: 1rem;
@@ -13,17 +9,27 @@
 
 .image {
   width: calc(40% - 2rem);
-  height: 100%;
   padding: 1rem;
 }
 
+.img {
+  width: 100%;
+}
+
 @media (min-width: 320px) and (max-width: 700px) {
+  .flex {
+    display: block;
+  }
+
   .image {
-    width: 100%;
+    width: calc(70% - 2rem);
+    margin: auto;
   }
 
   .info {
-    width: 100%;
-    text-align: center;
+    width: calc(100% - 2rem);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
   }
 }
