--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -11,7 +11,7 @@
 
       <div class="grid">
         <div class="grid__item one-half-width">
-          <div class="card">
+          <div class="card client-card">
             <div class="title">
               <h1 class="title-text">Retail</h1>
             </div>
@@ -30,7 +30,7 @@
           </div>
         </div>
         <div class="grid__item one-half-width">
-          <div class="card">
+          <div class="card client-card">
             <div class="title">
               <h1 class="title-text">Financial</h1>
             </div>
@@ -41,7 +41,7 @@
           </div>
         </div>
         <div class="grid__item one-half-width">
-          <div class="card">
+          <div class="card client-card">
             <div class="title">
               <h1 class="title-text">Hospitality</h1>
             </div>
@@ -55,7 +55,7 @@
           </div>
         </div>
         <div class="grid__item one-half-width">
-          <div class="card">
+          <div class="card client-card">
             <div class="title">
               <h1 class="title-text">Food Services</h1>
             </div>
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="grid__item one-half-width">
-          <div class="card">
+          <div class="card client-card">
             <div class="title">
               <h1 class="title-text">Health Care</h1>
             </div>
