--- a/app/templates/services.hbs
+++ b/app/templates/services.hbs
@@ -21,7 +21,7 @@
             </div>
             <div class="info">
               <div class="title">
-                <hi class="title-text">Web-based Services</hi>
+                <h1 class="no-margin">Web-based Services</h1>
               </div>
               <p>
                 Web-Based Services are at the core of what Tennessee Network Technologies provides.
@@ -38,7 +38,7 @@
         <div class="card flex">
           <div class="info">
               <div class="title">
-                <hi class="title-text">On-site Services</hi>
+                <h1 class="no-margin">On-site Services</h1>
               </div>
               <div class="grid">
                 <ul>
