Affiliated companies text fix

--- a/app/templates/companies.hbs
+++ b/app/templates/companies.hbs
@@ -11,7 +11,7 @@
           </div>
           <div class="info">
               <div class="title">
-                <hi class="title-text">Black Dog Surplus</hi>
+                <h1 class="no-margin">Black Dog Surplus</h1>
               </div>
               <p>
                 Black Dog Surplus provides customized freeze dried Rations and Meals Ready to Eat
