--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -43,7 +43,9 @@ $s-border: #d6d6d6 solid 0.08rem;
   font-family: $t-roboto;
   color: $c-grey;
   background: $c-dark-grey;
+  position: absolute;
   bottom: 0;
+  width: 100%;
 }
 
 @media (min-width: 320px) and (max-width: 650px) {
