--- a/app/styles/_reset.scss
+++ b/app/styles/_reset.scss
@@ -1,7 +1,14 @@
+html {
+  height: 100%;
+}
+
 body {
+  position: relative;
   margin: 0;
-  font-family: $t-roboto, sans-serif;
+  // padding-bottom: 1rem;
+  min-height: 100%;
   background: $c-white;
+  font-family: $t-roboto, sans-serif;
 }
 
 ul {
