--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -37,6 +37,7 @@ $s-border: #d6d6d6 solid 0.08rem;
 
 .below-nav {
   padding-top: 4.5rem;
+  padding-bottom: 3rem;
 }
 
 .footer {
@@ -46,6 +47,7 @@ $s-border: #d6d6d6 solid 0.08rem;
   position: absolute;
   bottom: 0;
   width: 100%;
+  height: 1rem;
 }
 
 @media (min-width: 320px) and (max-width: 650px) {
