Fix footer causing 1inch right margin

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -41,6 +41,7 @@ $s-border: #d6d6d6 solid 0.08rem;
 }
 
 .footer {
+  padding: 1rem 0;
   font-family: $t-roboto;
   color: $c-grey;
   background: $c-dark-grey;
