--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -18,7 +18,7 @@
 
   <div class="below-nav">{{outlet}}</div>
 
-  <footer id="footer" class="footer section">
-    <div class="container flex-end">© 2018 Tennessee Network Technologies, Inc.</div>
+  <footer id="footer" class="footer">
+    <div class="container">© 2018 Tennessee Network Technologies, Inc.</div>
   </footer>
 </div>
