--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,24 +1,1 @@
-<div class="app">
-  <nav class="navbar">
-    <div class="navbar__content">
-      {{#link-to "home" class="navbar__logo"}}
-        <img src="img/tnt-logo.png" alt="" class="">
-      {{/link-to}}
-      <div>
-        <ul class="navbar__links">
-          {{#link-to "companies" class="nav-link"}}Affiliated Companies{{/link-to}}
-          {{#link-to "services" class="nav-link"}}Services{{/link-to}}
-          {{#link-to "clients" class="nav-link"}}Clients{{/link-to}}
-          {{#link-to 'contact' class="nav-link"}}Contact Us{{/link-to}}
-          {{!-- <a class="nav-link" href="#">Request Ticket</a> --}}
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <div class="below-nav">{{outlet}}</div>
-
-  <footer id="footer" class="footer">
-    <div class="container">© 2018 Tennessee Network Technologies, Inc.</div>
-  </footer>
-</div>
+{{current-year}}
